# sapper

./: CMakeLists.txt  README.md  builder.sh  commiter.sh  main.cpp
inc/: board.hpp  commons.hpp  interface.hpp  resources.hpp  resources.inl  scores.hpp
src/: board.cpp  commons.cpp  interface.cpp  scores.cpp
